k8s/base/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: structurizr
spec:
  selector:
    app: structurizr
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
