k8s/base/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: structurizr-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: /workspace/diagrams

spec:
  rules:
    - host: api.dev.gooten.com
      http:
        paths:
          - path: /workspace
            pathType: Prefix
            backend:
              service:
                name: structurizr
                port:
                  number: 80
